--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
 
-            <div class="forecast-item-container">
+            <div class="forecast-items-container">
                 <div class="forecast-item">
                     <h5 class="forecast-item-date regular-text">05 Aug</h5>
                     <img src="assets/weather/thunderstorm.svg" class="forecast-item-img">
